# hr-policy-bot

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run_app.py  streamlit.secrets.example.toml  streamlit_app.py
data/index/: meta.jsonl  vectors.npy
scripts/: build_index.py
src/app/: main.py
src/core/: config.py
src/data_pipeline/: cli_ingest.py
src/llm/: generator.py
src/retrieval/: embeddings.py  index_faiss.py  search.py
src/storage/: models.py  repositories.py  session.py
tests/: test_core.py
